syntax = "proto3";

option csharp_namespace = "PulseApp.Console.Protos";

package attendance;

service AttendanceManager {
  rpc GetAttendanceTypes (AttendanceTypeRequest) returns (AttendanceTypeResponse);
}

message AttendanceTypeRequest {
}

message AttendanceTypeResponse {
    repeated AttendanceTypeProto attendance_types = 1;
}

message AttendanceTypeProto {
    int32 id = 1;
    string code = 2;
    string name = 3;
    bool is_default = 4;
}