syntax = "proto3";

option csharp_namespace = "PulseApp.Protos";

import "google/protobuf/timestamp.proto";

package leave;

service LeaveManager {
  rpc GetLeaveLedger (LeaveLedgerRequest) returns (LeaveLedgerResponse);
  rpc GetLeaveTypes (LeaveTypeRequest) returns (LeaveTypeResponse);
}

message LeaveLedgerRequest {
  int32 employee_id = 1;
  int32 calendar_id = 2;
}

message LeaveLedgerResponse {
    repeated LeaveTypeProto leave_types = 1;
    map<int32, int32> forward = 2;
    map<int32, int32> opening = 3;
    repeated LeaveDateProto leaves = 4;
}

message LeaveTypeRequest {
}

message LeaveTypeResponse {
    repeated LeaveTypeProto leave_types = 1;
 }

message LeaveTypeProto {
    int32 id = 1;
    string name = 2;
}

message LeaveDateProto {
    google.protobuf.Timestamp date = 1;
    map<int32, int32> leave_type_count = 2;
}


